deploy: 4771eedb24610ecff4663d61b8e61477088390dd

--- a/print.html
+++ b/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -188,9 +188,9 @@
 <li>In a large bowl, mix together the dry ingredients: oats, coconut, baking powder, baking soda, and salt.</li>
 <li>In a medium bowl, mix together the wet ingredients: almond butter, maple syrup, vanilla, and prepared flax eggs. Whisk until smooth and thick.</li>
 <li>Pour the wet mixture into the dry ingredients, using a silicone spatula to mix everything until the mixture resembles a cookie dough. Fold in your desired mix-ins (dried fruit, pumpkin/sunflower seeds, and hemp seeds) using the spatula.</li>
-<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. 10 - 15 minutes)</li>
+<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. (10 - 15 minutes)</li>
 <li>Use an ice cream scoop or large spoon to scoop about 3 tablespoons of dough onto the prepared baking sheet, spacing them about 1/2 inch apart. Alternatively, measure out 3 tablespoons and shape the dough into a round using your hands. Lightly flatten the top of each cookie with your hands or a fork.</li>
-<li>Bake the cookies for about 18-20 minutes. 18 - 20 minutes)</li>
+<li>Bake the cookies for about 18-20 minutes. (18 - 20 minutes)</li>
 <li>Cool for 5 minutes. Use a spatula to carefully transfer them to a cooling rack. Store leftover cookies in an airtight container on the counter for 5 to 7 days. (5 minutes)</li>
 </ol>
 <h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
@@ -223,7 +223,7 @@
 <ol>
 <li>Heat oven to 200C/180C fan/gas 6</li>
 <li>In a bowl, toss the wedges with the oil, 1 tsp salt and 1/4 tsp pepper</li>
-<li>Transfer to a baking sheet and roast. Turning halfway through. The wedges should be crisp and golden brown. 25 - 30 minutes)</li>
+<li>Transfer to a baking sheet and roast. Turning halfway through. The wedges should be crisp and golden brown. (25 - 30 minutes)</li>
 <li>Meanwhile, make the slaw. Remove the cabbage’s white core and discard. Slice the leaves as finely as possible and put in a large mixing bowl with the onion and cornichons</li>
 <li>In another bowl, combine the yogurt or mayonnaise with the dill and 2 tbsp of the cornichons’ pickling liquid</li>
 <li>Mix the dressing with the other slaw ingredients until everything is well coated, then set aside</li>
@@ -232,7 +232,7 @@
 <li>Beat the eggs lightly in a shallow bowl</li>
 <li>Tip the breadcrumbs into a separate bowl with a good pinch of salt and pepper</li>
 <li>Dip each cod finger in the egg and then in the breadcrumbs, and place on an oiled baking sheet</li>
-<li>Grill for 6-7 mins or until cooked through and golden 6 - 7 minutes)</li>
+<li>Grill for 6-7 mins or until cooked through and golden (6 - 7 minutes)</li>
 <li>Serve with the crispy wedges and a generous helping of the dill pickle slaw</li>
 </ol>
 <h2 id="nutrition"><a class="header" href="#nutrition">Nutrition</a></h2>
@@ -320,6 +320,73 @@
 <li>Prepare tortillas or shells according to the packaging.</li>
 <li>Serve with grated cheese</li>
 </ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="thyme-roast-chicken"><a class="header" href="#thyme-roast-chicken">Thyme Roast Chicken</a></h1>
+<p>With Roast Veggies and Sweet Chilli Sauce. This Thyme Roast Chicken with Roast Veggies is bursting full of flavours and make the perfect dinner night option, from HelloFresh. Cook up a fresh start!</p>
+<p><img src="images/thyme-roast-chicken/header.jpg" alt="Thyme Roast Chicken header image" /></p>
+<ul>
+<li>Prep time: 40 minutes</li>
+<li>Total time: 40 minutes</li>
+</ul>
+<h2 id="allergens"><a class="header" href="#allergens">Allergens</a></h2>
+<ul>
+<li>Celery</li>
+</ul>
+<h2 id="ingredients-4"><a class="header" href="#ingredients-4">Ingredients</a></h2>
+<p>Serves 4</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">900 gr</td><td>Potatoes</td><td></td></tr>
+<tr><td align="right">4</td><td>Carrots</td><td></td></tr>
+<tr><td align="right">1 bunch</td><td>Flat leaf parsley</td><td></td></tr>
+<tr><td align="right">2 sachets</td><td>Dried thyme</td><td></td></tr>
+<tr><td align="right">50 gr</td><td>Fresh chilli jam</td><td></td></tr>
+<tr><td align="right">2</td><td>Red onion</td><td></td></tr>
+<tr><td align="right">2</td><td>Bell pepper</td><td></td></tr>
+<tr><td align="right">4</td><td>Chicken breasts</td><td></td></tr>
+<tr><td align="right">22 gr</td><td>Chicken stock paste</td><td></td></tr>
+<tr><td align="right">200 ml</td><td>Water</td><td></td></tr>
+</tbody></table>
+<h2 id="steps-4"><a class="header" href="#steps-4">Steps</a></h2>
+<ol>
+<li>Preheat your oven to 200°C</li>
+<li>Chop the potatoes into 2cm wide wedges (no need to peel!). Pop the wedges on a large baking tray in a single layer. Drizzle with oil, then season with salt and pepper</li>
+<li>undefined (30 - 35 minutes)<br />
+<img src="images/thyme-roast-chicken/1.jpg" alt="Step image 1" /></li>
+<li>Halve, peel and chop the red onion into 6 wedges</li>
+<li>Trim the carrot (no need to peel), quarter lengthways and then chop into roughly 5cm long batons</li>
+<li>Halve the pepper, remove the core and slice into 1cm wide strips</li>
+<li>Roughly chop the parsley (stalks and all)<br />
+<img src="images/thyme-roast-chicken/2.jpg" alt="Step image 2" /></li>
+<li>Put the chicken in a bowl with a glug of oil and half the dried thyme. Season with salt and pepper. Massage the seasoning into your chicken. IMPORTANT: Wash your hands after handling raw meat</li>
+<li>Pop the red onion, carrot and pepper on a baking tray. Sprinkle on the remaining dried thyme, add a glug of oil and season with salt and pepper. Toss to coat the veggies</li>
+<li>Roast in your oven until soft and golden (25 - 30 minutes)<br />
+<img src="images/thyme-roast-chicken/3.jpg" alt="Step image 3" /></li>
+<li>Heat a frying pan on high heat (no oil). Lay in the chicken breasts and cook until browned on both sides, 2-3 mins each side</li>
+<li>Once browned, transfer to your baking tray on top of the veggies and cook for the remaining 15-20 mins. Important: The chicken is cooked when no longer pink in the middle. Don't wash your pan - you need it again in a minute</li>
+<li>Whilst the chicken is roasting, add the chicken stock powder and water to the chicken frying pan, bring to a boil then reduce the heat to a simmer</li>
+<li>Add the chilli jam and bubble the mixture until thickened, 3-4 mins. Season with salt and pepper<br />
+<img src="images/thyme-roast-chicken/4.jpg" alt="Step image 4" /></li>
+<li>Once cooked, remove the chicken, veg and wedges from your oven</li>
+<li>Slice each chicken breast into five slices</li>
+<li>Combine the wedges, vegetables and chopped parsley together on one of the baking trays, then spoon onto plates</li>
+<li>Arrange the chicken on top and reheat the sweet chilli glaze if needed</li>
+<li>Spoon the sweet chilli glaze over the chicken and enjoy<br />
+<img src="images/thyme-roast-chicken/6.jpg" alt="Step image 6" /></li>
+</ol>
+<h2 id="nutrition-1"><a class="header" href="#nutrition-1">Nutrition</a></h2>
+<table><thead><tr><th>Nutrition</th><th align="right">Amount</th></tr></thead><tbody>
+<tr><td>Energy</td><td align="right">1900 kJ</td></tr>
+<tr><td>Energy</td><td align="right">454 kcal</td></tr>
+<tr><td>Fat</td><td align="right">4.0 g</td></tr>
+<tr><td>of which saturates</td><td align="right">1.0 g</td></tr>
+<tr><td>Carbohydrate</td><td align="right">61 g</td></tr>
+<tr><td>of which sugars</td><td align="right">18.0 g</td></tr>
+<tr><td>Protein</td><td align="right">46 g</td></tr>
+<tr><td>Salt</td><td align="right">0.96 g</td></tr>
+</tbody></table>
+<h2 id="sources-3"><a class="header" href="#sources-3">Sources</a></h2>
+<ul>
+<li><a href="https://www.hellofresh.co.uk/recipes/thyme-roast-chicken-5fd75e66a608a0561c026f48/">https://www.hellofresh.co.uk/recipes/thyme-roast-chicken-5fd75e66a608a0561c026f48/</a></li>
+</ul>
 
                     </main>
 
