--- a/vegan-breakfast-cookies.html
+++ b/vegan-breakfast-cookies.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html" class="active">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html" class="active">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -188,9 +188,9 @@
 <li>In a large bowl, mix together the dry ingredients: oats, coconut, baking powder, baking soda, and salt.</li>
 <li>In a medium bowl, mix together the wet ingredients: almond butter, maple syrup, vanilla, and prepared flax eggs. Whisk until smooth and thick.</li>
 <li>Pour the wet mixture into the dry ingredients, using a silicone spatula to mix everything until the mixture resembles a cookie dough. Fold in your desired mix-ins (dried fruit, pumpkin/sunflower seeds, and hemp seeds) using the spatula.</li>
-<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. 10 - 15 minutes)</li>
+<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. (10 - 15 minutes)</li>
 <li>Use an ice cream scoop or large spoon to scoop about 3 tablespoons of dough onto the prepared baking sheet, spacing them about 1/2 inch apart. Alternatively, measure out 3 tablespoons and shape the dough into a round using your hands. Lightly flatten the top of each cookie with your hands or a fork.</li>
-<li>Bake the cookies for about 18-20 minutes. 18 - 20 minutes)</li>
+<li>Bake the cookies for about 18-20 minutes. (18 - 20 minutes)</li>
 <li>Cool for 5 minutes. Use a spatula to carefully transfer them to a cooling rack. Store leftover cookies in an airtight container on the counter for 5 to 7 days. (5 minutes)</li>
 </ol>
 <h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
