deploy: f83b93a3512e9cc5a892ea27a9bb8a3e1a6bb42b

--- a/thyme-roast-chicken.html
+++ b/thyme-roast-chicken.html
@@ -185,7 +185,7 @@
 <ol>
 <li>Preheat your oven to 200°C</li>
 <li>Chop the potatoes into 2cm wide wedges (no need to peel!). Pop the wedges on a large baking tray in a single layer. Drizzle with oil, then season with salt and pepper</li>
-<li>undefined (30 - 35 minutes)<br />
+<li>Toss to coat, then spread out and roast on the top shelf of your oven until golden. Turn halfway through cooking (30 - 35 minutes)<br />
 <img src="images/thyme-roast-chicken/1.jpg" alt="Step image 1" /></li>
 <li>Halve, peel and chop the red onion into 6 wedges</li>
 <li>Trim the carrot (no need to peel), quarter lengthways and then chop into roughly 5cm long batons</li>
