deploy: bb230b58b68ee3c8e9d3f890594c512359cd98e3

--- a/print.html
+++ b/print.html
@@ -79,7 +79,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Side</li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="quick-mexican-rice.html">Quick Mexican Rice</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -377,6 +377,59 @@
 <h2 id="sources-3"><a class="header" href="#sources-3">Sources</a></h2>
 <ul>
 <li><a href="https://www.hellofresh.co.uk/recipes/thyme-roast-chicken-5fd75e66a608a0561c026f48/">https://www.hellofresh.co.uk/recipes/thyme-roast-chicken-5fd75e66a608a0561c026f48/</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="quick-mexican-rice"><a class="header" href="#quick-mexican-rice">Quick Mexican Rice</a></h1>
+<p>This Quick Mexican Brown Rice is the perfect side dish that goes with everything from tacos, enchiladas, refried beans – you name it! This dish can be frozen beforehand in order to easily throw it in with anything else.</p>
+<p><img src="images/quick-mexican-rice/header.jpg" alt="Quick Mexican Rice header image" /></p>
+<ul>
+<li>Prep time: 40 minutes</li>
+<li>Total time: 40 minutes</li>
+</ul>
+<h2 id="allergens-1"><a class="header" href="#allergens-1">Allergens</a></h2>
+<ul>
+<li>Cilantro</li>
+</ul>
+<h2 id="ingredients-5"><a class="header" href="#ingredients-5">Ingredients</a></h2>
+<p>Serves 4</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">2 cups</td><td>Brown rice</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Cooking oil</td><td></td></tr>
+<tr><td align="right">1/2</td><td>Medium-sized onion, finely diced</td><td></td></tr>
+<tr><td align="right">2</td><td>Medium-sized tomatoes</td><td></td></tr>
+<tr><td align="right">50 ml</td><td>Fresh chilli jam</td><td></td></tr>
+<tr><td align="right">1</td><td>Jalapeno, seeds removed</td><td></td></tr>
+<tr><td align="right">2</td><td>Garlic cloves, minced</td><td></td></tr>
+<tr><td align="right">2 tbsp</td><td>Tomato paste/passata</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Cumin</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Smoked paprika</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Cayenne pepper</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Salt</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Black pepper</td><td></td></tr>
+<tr><td align="right">1</td><td>Lime</td><td></td></tr>
+<tr><td align="right">1 small handful</td><td>Cilantro (optional)</td><td></td></tr>
+</tbody></table>
+<h2 id="steps-5"><a class="header" href="#steps-5">Steps</a></h2>
+<ol>
+<li>Cook the rice. In a rice cooker, this can take anywhere from 25-30m, so plan accordingly if you are preparing another dish in parallel.</li>
+<li>Heat the oil in a large skillet over medium-high heat. Once the oil is hot, add the onions, tomatoes and jalapeno and sauté (frequently stir) until just tender, about 2-3 minutes. (2 - 3 minutes)</li>
+<li>Add garlic and sauté. (1 minutes)</li>
+<li>Add the tomato paste, cumin, paprika, cayenne, salt and pepper.  Stir to evenly coat the vegetables.</li>
+<li>Add the cooked rice, stir, and cook until heated through. (1 minutes)</li>
+<li>Serve with cilantro and lime wedges on the side.</li>
+</ol>
+<h2 id="nutrition-2"><a class="header" href="#nutrition-2">Nutrition</a></h2>
+<table><thead><tr><th>Nutrition</th><th align="right">Amount</th></tr></thead><tbody>
+<tr><td>Calories</td><td align="right">200 kcal</td></tr>
+<tr><td>Carbohydrates</td><td align="right">39 g</td></tr>
+<tr><td>Protein</td><td align="right">5.0 g</td></tr>
+<tr><td>Cholesterol</td><td align="right">17 mg</td></tr>
+<tr><td>Sodium</td><td align="right">234 mg</td></tr>
+<tr><td>Fiber</td><td align="right">3 g</td></tr>
+<tr><td>Sugar</td><td align="right">2 g</td></tr>
+</tbody></table>
+<h2 id="sources-4"><a class="header" href="#sources-4">Sources</a></h2>
+<ul>
+<li><a href="https://www.skinnytaste.com/quick-mexican-brown-rice/">https://www.skinnytaste.com/quick-mexican-brown-rice/</a></li>
 </ul>
 
                     </main>
