--- a/quick-mexican-rice.html
+++ b/quick-mexican-rice.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Taco - anoa &amp; Twilys recipes</title>
+        <title>Quick Mexican Rice - anoa &amp; Twilys recipes</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="anoa &amp; Twilys recipes">
@@ -78,7 +78,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html" class="active">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Side</li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="quick-mexican-rice.html">Quick Mexican Rice</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html">Thyme Roast Chicken</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Side</li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="quick-mexican-rice.html" class="active">Quick Mexican Rice</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -117,7 +117,7 @@
                         <a href="https://github.com/anoadragon453/recipes" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/anoadragon453/recipes/edit/main/src/taco.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/anoadragon453/recipes/edit/main/src/quick-mexican-rice.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -147,48 +147,66 @@
                         <!-- Page table of contents -->
                         <div class="sidetoc"><nav class="pagetoc"></nav></div>
 
-                        <h1 id="taco"><a class="header" href="#taco">Taco</a></h1>
-<p>Delicious taco</p>
+                        <h1 id="quick-mexican-rice"><a class="header" href="#quick-mexican-rice">Quick Mexican Rice</a></h1>
+<p>This Quick Mexican Brown Rice is the perfect side dish that goes with everything from tacos, enchiladas, refried beans – you name it! This dish can be frozen beforehand in order to easily throw it in with anything else.</p>
+<p><img src="images/quick-mexican-rice/header.jpg" alt="Quick Mexican Rice header image" /></p>
+<ul>
+<li>Prep time: 40 minutes</li>
+<li>Total time: 40 minutes</li>
+</ul>
+<h2 id="allergens"><a class="header" href="#allergens">Allergens</a></h2>
+<ul>
+<li>Cilantro</li>
+</ul>
 <h2 id="ingredients"><a class="header" href="#ingredients">Ingredients</a></h2>
 <p>Serves 4</p>
 <table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
-<tr><td align="right">8</td><td>Tortillas and/or taco shells</td><td></td></tr>
-<tr><td align="right">600 gr</td><td>Minced meat</td><td></td></tr>
-<tr><td align="right">50 gr</td><td>Spice mix</td><td></td></tr>
-<tr><td align="right">300 gr</td><td>Salsa sauce</td><td></td></tr>
-<tr><td align="right">240 gr</td><td>Guacamole</td><td></td></tr>
-<tr><td align="right">200 gr</td><td>Sweet corn</td><td></td></tr>
-<tr><td align="right">1</td><td>Onion</td><td></td></tr>
-<tr><td align="right">6</td><td>Tomatoes</td><td></td></tr>
-<tr><td align="right">435 gr</td><td>Pineapple chunks</td><td></td></tr>
-<tr><td align="right">1</td><td>Garlic</td><td></td></tr>
-<tr><td align="right">150 gr</td><td>Jalapeño</td><td></td></tr>
-<tr><td align="right">100 gr</td><td>Sun dried tomatoes</td><td>Optional</td></tr>
-<tr><td align="right">100 gr</td><td>Feta cheese</td><td>Optional</td></tr>
-<tr><td align="right">1</td><td>Bell pepper</td><td></td></tr>
-<tr><td align="right">300 gr</td><td>Grated cheese</td><td></td></tr>
-<tr><td align="right">1</td><td>Lettuce</td><td></td></tr>
-<tr><td align="right">230 gr</td><td>Sour cream</td><td></td></tr>
+<tr><td align="right">2 cups</td><td>Brown rice</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Cooking oil</td><td></td></tr>
+<tr><td align="right">1/2</td><td>Medium-sized onion, finely diced</td><td></td></tr>
+<tr><td align="right">2</td><td>Medium-sized tomatoes</td><td></td></tr>
+<tr><td align="right">50 ml</td><td>Fresh chilli jam</td><td></td></tr>
+<tr><td align="right">1</td><td>Jalapeno, seeds removed</td><td></td></tr>
+<tr><td align="right">2</td><td>Garlic cloves, minced</td><td></td></tr>
+<tr><td align="right">2 tbsp</td><td>Tomato paste/passata</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Cumin</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Smoked paprika</td><td></td></tr>
+<tr><td align="right">1/4 tsp</td><td>Cayenne pepper</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Salt</td><td></td></tr>
+<tr><td align="right">1 tsp</td><td>Black pepper</td><td></td></tr>
+<tr><td align="right">1</td><td>Lime</td><td></td></tr>
+<tr><td align="right">1 small handful</td><td>Cilantro (optional)</td><td></td></tr>
 </tbody></table>
 <h2 id="steps"><a class="header" href="#steps">Steps</a></h2>
 <ol>
-<li>Cut all vegetables except lettuce into a large bowl. Mix well together</li>
-<li>Cut lettuce into it's own bowl</li>
-<li>Fry the minced meat until no longer brown</li>
-<li>Add the spice mix and water according to the packaging. Cook until almost dry</li>
-<li>Prepare tortillas or shells according to the packaging.</li>
-<li>Serve with grated cheese</li>
+<li>Cook the rice. In a rice cooker, this can take anywhere from 25-30m, so plan accordingly if you are preparing another dish in parallel.</li>
+<li>Heat the oil in a large skillet over medium-high heat. Once the oil is hot, add the onions, tomatoes and jalapeno and sauté (frequently stir) until just tender, about 2-3 minutes. (2 - 3 minutes)</li>
+<li>Add garlic and sauté. (1 minutes)</li>
+<li>Add the tomato paste, cumin, paprika, cayenne, salt and pepper.  Stir to evenly coat the vegetables.</li>
+<li>Add the cooked rice, stir, and cook until heated through. (1 minutes)</li>
+<li>Serve with cilantro and lime wedges on the side.</li>
 </ol>
+<h2 id="nutrition"><a class="header" href="#nutrition">Nutrition</a></h2>
+<table><thead><tr><th>Nutrition</th><th align="right">Amount</th></tr></thead><tbody>
+<tr><td>Calories</td><td align="right">200 kcal</td></tr>
+<tr><td>Carbohydrates</td><td align="right">39 g</td></tr>
+<tr><td>Protein</td><td align="right">5.0 g</td></tr>
+<tr><td>Cholesterol</td><td align="right">17 mg</td></tr>
+<tr><td>Sodium</td><td align="right">234 mg</td></tr>
+<tr><td>Fiber</td><td align="right">3 g</td></tr>
+<tr><td>Sugar</td><td align="right">2 g</td></tr>
+</tbody></table>
+<h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
+<ul>
+<li><a href="https://www.skinnytaste.com/quick-mexican-brown-rice/">https://www.skinnytaste.com/quick-mexican-brown-rice/</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="halfy-biryani.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="thyme-roast-chicken.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
-                            </a>
-                            <a rel="next" href="thyme-roast-chicken.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
                     </nav>
@@ -196,11 +214,8 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="halfy-biryani.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="thyme-roast-chicken.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
-                    </a>
-                    <a rel="next" href="thyme-roast-chicken.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
