--- a/thyme-roast-chicken.html
+++ b/thyme-roast-chicken.html
@@ -78,7 +78,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html" class="active">Thyme Roast Chicken</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li><li class="chapter-item expanded "><div>Chicken</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="thyme-roast-chicken.html" class="active">Thyme Roast Chicken</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Side</li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="quick-mexican-rice.html">Quick Mexican Rice</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -222,6 +222,9 @@
                             <a rel="prev" href="taco.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+                            <a rel="next" href="quick-mexican-rice.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -230,6 +233,9 @@
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
                     <a rel="prev" href="taco.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
+                    </a>
+                    <a rel="next" href="quick-mexican-rice.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
